--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             font-size: larger;
             font-style: normal;
         }
+	
+	ul {
+            list-style-type: none;
+            background-color:white;
+        }
+
 
     </style>
 
@@ -84,14 +90,16 @@
 
 <!-- channel area -->
 <!-- #1 #channels #app-bar -->
-<h1>chatter|app</h1>
+<h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" alt="Moocus image" style="width: 56px; height: 56px">chatter|app</h1>
 
 <!-- #1 #channels #topics -->
-<h2>#Yummy</h2>
-<h2>#SevenContinents</h2>
-<h2>#KillerApp</h2>
-<h2>#FirstPersonOnMars</h2>
-<h2>#Octoberfest</h2>
+<ul>
+<li><h2>#Yummy <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="really like" style="width: 30px; height: 30px"></li></h2>
+<li><h2>#SevenContinents <img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="really like" style="width: 30px; height: 30px"></li></h2></li>
+<li><h2>#KillerApp <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="really like" style="width: 30px; height: 30px"></li></h2></li>
+<li><h2>#FirstPersonOnMars <img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="really like" style="width: 30px; height: 30px"></li></h2></li>
+<li><h2>#Octoberfest <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="really like" style="width: 30px; height: 30px"></li></li></h2>
+</ul>
 
 <!-- #1 #channels #buttons -->
 <button>new</button>
