--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             list-style-type: none;
             background-color:white;
         }
+	div {background-color:white;}
 
 
     </style>
@@ -94,17 +95,19 @@
 
 <!-- #1 #channels #topics -->
 <ul>
-<li><h2>#Yummy <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="really like" style="width: 30px; height: 30px"></li></h2>
+<li><h2>#Yummy <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="don't really like" style="width: 30px; height: 30px"></li></h2>
 <li><h2>#SevenContinents <img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="really like" style="width: 30px; height: 30px"></li></h2></li>
-<li><h2>#KillerApp <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="really like" style="width: 30px; height: 30px"></li></h2></li>
+<li><h2>#KillerApp <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="don't really like" style="width: 30px; height: 30px"></li></h2></li>
 <li><h2>#FirstPersonOnMars <img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="really like" style="width: 30px; height: 30px"></li></h2></li>
-<li><h2>#Octoberfest <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="really like" style="width: 30px; height: 30px"></li></li></h2>
+<li><h2>#Octoberfest <img src="https://ip.lfe.mw.tum.de/sections/star-o.png" alt="don't really like" style="width: 30px; height: 30px"></li></li></h2>
 </ul>
 
 <!-- #1 #channels #buttons -->
-<button>new</button>
-<button>trending</button>
-<button>favorites</button>
+<div>
+<button><img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="lightbulb-o">new</button>
+<button><img src="https://ip.lfe.mw.tum.de/sections/fire.png" alt="fire">trending</button>
+<button><img src="https://ip.lfe.mw.tum.de/sections/star.png" alt="star">favorites</button>
+</div>
 
 
 <!-- chat area -->
@@ -117,6 +120,7 @@
     </small>
 </h1>
 
+<div>
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -129,7 +133,9 @@
 <p>What's the place you folks call home?</p>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
+<div>
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -142,7 +148,9 @@
 <p>BRISBANE! Hang loose!</p>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
+<div>
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -155,7 +163,9 @@
 <p>The big apple.</p>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
+<div>
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -168,7 +178,9 @@
 <p>Eu sou um Carocas.</p>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
+<div>
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -181,7 +193,9 @@
 <p>Greetings from the western cape!</p>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
+<div>
 <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -194,6 +208,7 @@
 <p>北京</p>
 <!-- #1 #chat #button subsequent to each message -->
 <button>+5 min.</button>
+</div>
 
 </body>
 </html>
