--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </small>
 </h1>
 
-<div>
+<div style="width: 80%;">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -135,7 +135,7 @@
 <button>+5 min.</button>
 </div>
 
-<div>
+<div style="width: 80%;">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -150,7 +150,7 @@
 <button>+5 min.</button>
 </div>
 
-<div>
+<div style="width: 80%;">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -165,7 +165,7 @@
 <button>+5 min.</button>
 </div>
 
-<div>
+<div style="width: 80%;">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -180,7 +180,7 @@
 <button>+5 min.</button>
 </div>
 
-<div>
+<div style="width: 80%;">
 <!-- #1 #chat #metadata contains location, weekday, day, and time -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
@@ -195,7 +195,7 @@
 <button>+5 min.</button>
 </div>
 
-<div>
+<div style="width: 80%;">
 <!-- #1 #chat #metadata contains location, weekday, day, and time  -->
 <h3>
     <!-- #2 #font #locations need an extra element, we'll use strong for w3w locations -->
